# WhaleDoneEngine

./: CMakeLists.txt  TODO
Sandbox/: CMakeLists.txt  ParticalObject.cpp  ParticalObject.h  Sandbox.cpp  TestScene.cpp  TestScene.h
WhaleDoneEngine/: CMakeLists.txt  EntryPoint.h  WhaleDoneEngine.h  wdpch.h
WhaleDoneEngine/src/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Camera.h  CollisionManager.cpp  CollisionManager.h  Event.h  EventManager.h  InputManager.cpp  InputManager.h  KeyEvent.h  MathHelper.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Scene.h  SceneManager.cpp  SceneManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h  base.h  mathHelper.h
WhaleDoneEngine/src/GameUtils/: MapLoader.cpp  MapLoader.h
